--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,5 +24,5 @@ endforeach()
 
 set(CMAKE_CXX_STANDARD 14)
 #set(CMAKE_CXX_FLAGS_DEBUG "-O3")
-add_executable(${EXE_NAME} main.cpp AdjList.h CityConnections.h RouteData.h Manager.h)
+add_executable(${EXE_NAME} main.cpp AdjList.h CityConnections.h RouteData.h Manager.h AdjList.cpp AdjListTests.cpp DSString.h DSString.cpp DSDLinkedList.h)
 
